--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,9 @@
     <drawable name="white">#FFFFFF</drawable>
     <drawable name="black">#000000</drawable>
     <drawable name="blue">#2A00FF</drawable>
+    <drawable name="blue_two">#5C97D5</drawable>
     <drawable name="green">#f0f0</drawable>
     <drawable name="green_two">#42a664</drawable>
     <drawable name="yellow">#FFFEA4</drawable>
+
 </resources>
