--- a/app/src/main/res/layout/seek_sf_topic.xml
+++ b/app/src/main/res/layout/seek_sf_topic.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#EEEEEE">
 
     <RelativeLayout
         android:orientation="horizontal"
@@ -24,14 +25,14 @@
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="30dp"
-        android:background="#f5f5f5">
+        android:background="#ffffff">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="女"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:text="全部(性别)"
             android:id="@+id/sex_btn"
-            android:background="#f5f5f5"
+            android:background="@drawable/common_btn_selector"
             android:layout_weight="0.33"
             android:textSize="13sp"
             android:drawableRight="@drawable/arrow_filter"/>
@@ -42,11 +43,11 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp" />
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
             android:text="地点"
             android:id="@+id/address_btn"
-            android:background="#f5f5f5"
+            android:background="@drawable/common_btn_selector"
             android:layout_weight="0.33"
             android:textSize="13sp"
             android:drawableRight="@drawable/arrow_filter"/>
@@ -57,11 +58,11 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp" />
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="接待人数"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:text="全部(人数)"
             android:id="@+id/peopleNum_btn"
-            android:background="#f5f5f5"
+            android:background="@drawable/common_btn_selector"
             android:layout_weight="0.33"
             android:textSize="13sp"
             android:drawableRight="@drawable/arrow_filter"
@@ -71,5 +72,7 @@
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/seek_sf_topic_listView" />
+        android:id="@+id/seek_sf_topic_listView"
+        android:layout_marginTop="5dp"
+        android:background="#ffffff" />
 </LinearLayout>
