--- a/app/src/main/res/layout/bbs_fragment.xml
+++ b/app/src/main/res/layout/bbs_fragment.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-    <RelativeLayout
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:text="我的沙发游"
+            android:id="@+id/bbs_TopTitle"
+            android:textSize="20dp"
+            android:gravity="center_vertical"
+            android:background="#b62a3717"
+            android:textColor="#ffffa474" />
+
+        <ListView
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/bbs"
-            android:id="@+id/textView"
-            android:textColor="@drawable/green_two"
-            android:textSize="40sp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-    </RelativeLayout>
+            android:id="@+id/bbs_TopicList" />
+    </LinearLayout>
 </LinearLayout>
