--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,14 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
+    <style name="sf_info_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_marginLeft">6dp</item>
+    </style>
+
+
+
 </resources>
