--- a/app/src/main/res/layout/sf_info.xml
+++ b/app/src/main/res/layout/sf_info.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="寻找沙发"
+            android:text="沙发信息"
             android:id="@+id/textView2"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
