--- a/app/src/main/res/layout/add_sfk.xml
+++ b/app/src/main/res/layout/add_sfk.xml
@@ -162,7 +162,13 @@
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
-
+<!--
+                <ImageView
+                    android:layout_width="fill_parent"
+                    android:layout_height="250dp"
+                    android:layout_margin="20dp"
+                    android:id="@+id/imageView" />
+-->
                 <ImageView
                     android:layout_width="fill_parent"
                     android:layout_height="250dp"
