--- a/app/src/main/res/layout/select_to_refresh.xml
+++ b/app/src/main/res/layout/select_to_refresh.xml
@@ -10,7 +10,7 @@
         android:layout_height="fill_parent"
 
         android:layout_gravity="center_horizontal"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true">
         <ProgressBar
             android:id="@+id/progress_bar"
