--- a/app/src/main/res/layout/bbs_list_text.xml
+++ b/app/src/main/res/layout/bbs_list_text.xml
@@ -1,49 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="250dp">
-        <ImageView
+        android:layout_height="66dp">
+
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/bbs_topicPhoto" />
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="topicTitle"
-            android:id="@+id/bbs_topicTitle"
-            android:layout_marginLeft="37dp"
-            android:layout_above="@+id/bbs_userName"
-            android:layout_alignParentLeft="true"
-            android:layout_marginBottom="5dp"
-            android:textColor="#ffffff"
-            android:textSize="@dimen/bbs_topicTitle_textSize" />
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="32dp"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="userName"
-            android:id="@+id/bbs_userName"
-            android:layout_alignBaseline="@+id/bbs_topicTime"
-            android:layout_alignBottom="@+id/bbs_topicTime"
-            android:layout_alignLeft="@+id/bbs_topicTitle"
-            android:textColor="#ffffff"
-            android:alpha="0.8"
-            android:textSize="@dimen/bbs_user_time_textSize" />
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.08"
+                    android:src="@drawable/mainpage_my_pressed" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="topicTime"
-            android:id="@+id/bbs_topicTime"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="24dp"
-            android:layout_alignBottom="@+id/bbs_topicPhoto"
-            android:layout_toRightOf="@+id/bbs_userName"
-            android:textColor="#ffffff"
-            android:alpha="0.8"
-            android:textSize="@dimen/bbs_user_time_textSize" />
+                <LinearLayout
+                    android:layout_width="20dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="0.37"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/bbs_userName"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:layout_above="@+id/bbs_topicTime"
+
+                        android:layout_alignParentLeft="true"
+                        android:layout_weight="1"
+                        android:alpha="0.8"
+                        android:text="a"
+                        android:textColor="#ff262626"
+                        android:textSize="@dimen/bbs_user_time_textSize" />
+
+                    <TextView
+                        android:id="@+id/bbs_topicTime"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignRight="@+id/bbs_userName"
+                        android:layout_weight="1"
+                        android:alpha="0.8"
+                        android:text="a"
+                        android:textColor="#ff262626"
+                        android:textSize="@dimen/bbs_user_time_textSize" />
+
+
+
+                </LinearLayout>
+            </LinearLayout>
+
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <TextView
+                    android:id="@+id/bbs_topicTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="18dp"
+                    android:gravity="left|top"
+                    android:text="topicTitle"
+                    android:textSize="@dimen/bbs_topicTitle_textSize" />
+            </RelativeLayout>
+
+            <!--            <View
+                            android:layout_width="fill_parent"
+                            android:layout_height="1dp"
+                            android:background="#ffededed"
+                            />-->
+
+        </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
