--- a/app/src/main/res/layout/seek_sf_topic.xml
+++ b/app/src/main/res/layout/seek_sf_topic.xml
@@ -45,7 +45,7 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:text="地点"
+            android:text="地点(全部)"
             android:id="@+id/address_btn"
             android:background="@drawable/common_btn_selector"
             android:layout_weight="0.33"
