--- a/app/src/main/res/layout/person_fragment.xml
+++ b/app/src/main/res/layout/person_fragment.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
 
         <TextView
             android:layout_width="wrap_content"
@@ -14,5 +11,12 @@
             android:textSize="40sp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
-    </RelativeLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="登录"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="注册"/>
 </LinearLayout>
