--- a/app/src/main/res/layout/person_fragment.xml
+++ b/app/src/main/res/layout/person_fragment.xml
@@ -12,11 +12,8 @@
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
         <Button
+            android:id="@+id/btn_login_or_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="登录"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="注册"/>
+            android:text="登录/注册"/>
 </LinearLayout>
