--- a/app/src/main/res/layout/person_fragment.xml
+++ b/app/src/main/res/layout/person_fragment.xml
@@ -16,4 +16,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="登录/注册"/>
+        <Button
+            android:id="@+id/btn_perfect_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="完善资料"/>
 </LinearLayout>
