Rejected commit: Default

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -72,7 +72,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:background="@drawable/button01"
-            android:gravity="right"
+            android:gravity="center"
             android:paddingRight="5dp"
             android:text="登录"
             android:textColor="#ffffffff"
@@ -86,7 +86,7 @@
             android:layout_marginRight="40dp"
             android:layout_weight="1"
             android:background="@drawable/button02"
-            android:gravity="left"
+            android:gravity="center"
             android:paddingLeft="5dp"
             android:text="注册"
             android:textColor="#ffffffff"
