--- a/app/src/main/res/layout/add_sfk.xml
+++ b/app/src/main/res/layout/add_sfk.xml
@@ -160,11 +160,17 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/path"
-                    android:id="@+id/path" />
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent">
+
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/imageView" />
+                </LinearLayout>
 
                 <Button
                     android:layout_width="wrap_content"
@@ -172,10 +178,10 @@
                     android:text="@string/Choice"
                     android:id="@+id/choice" />
 
-                <ImageButton
-                    android:layout_width="fill_parent"
-                    android:layout_height="50dp"
-                    android:id="@+id/upImage" />
+                <!--<ImageButton-->
+                    <!--android:layout_width="fill_parent"-->
+                    <!--android:layout_height="50dp"-->
+                    <!--android:id="@+id/upImage" />-->
 
             </LinearLayout>
 
