--- a/app/src/main/res/layout/add_sfk.xml
+++ b/app/src/main/res/layout/add_sfk.xml
@@ -156,20 +156,15 @@
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="fill_parent"
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="fill_parent"
+                    android:id="@+id/imagesLayout"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent">
-
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/imageView" />
                 </LinearLayout>
 
                 <Button
