--- a/app/src/main/res/layout/select_to_refresh.xml
+++ b/app/src/main/res/layout/select_to_refresh.xml
@@ -2,8 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/select_to_refresh_head"
     android:layout_width="fill_parent"
-    android:layout_height="60dip"
-    android:visibility="gone">
+    android:layout_height="50dp"
+    android:visibility="gone"
+    android:background="@drawable/light_gray">
 
     <RelativeLayout
         android:layout_width="200dp"
@@ -14,8 +15,10 @@
         android:layout_centerHorizontal="true">
         <ProgressBar
             android:id="@+id/progress_bar"
-            android:layout_width="50dip"
-            android:layout_height="50dip"
+            android:layout_width="30dip"
+            android:layout_height="30dip"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_vertical"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/updated_at_2"
             android:layout_marginRight="18dp" />
@@ -25,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/refreshing"
+            android:text="@string/refresh_loading"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="34dp" />
