--- a/app/src/main/res/layout/seek_sf_topic.xml
+++ b/app/src/main/res/layout/seek_sf_topic.xml
@@ -70,31 +70,47 @@
     </LinearLayout>
 
     <!--加载数据进度条-->
-    <include layout="@layout/select_to_refresh"/>
-
-    <com.sfk.UI.RefreshableView
-        android:id="@+id/refreshable_view"
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1">
-    <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/seek_sf_topic_listView"
-        android:layout_marginTop="5dp"
-        android:background="#ffffff" />
-    </com.sfk.UI.RefreshableView>
+        android:layout_height="fill_parent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:visibility="visible">
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:text="我有沙发"
-        android:id="@+id/sf_btn"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:textColor="#ffffff"
-        android:textSize="18sp"
-        android:background="@drawable/green_btn_selector">
+            <include layout="@layout/select_to_refresh"/>
 
-    </Button>
+            <com.sfk.UI.RefreshableView
+                android:id="@+id/refreshable_view"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1">
+            <ListView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:id="@+id/seek_sf_topic_listView"
+                android:layout_marginTop="5dp"
+                android:background="#ffffff" />
+            </com.sfk.UI.RefreshableView>
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:text="我有沙发"
+                android:id="@+id/sf_btn"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:background="@drawable/green_btn_selector"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true">
+
+            </Button>
+        </LinearLayout>
+
+        <!--中间加载数据滚动-->
+        <include layout="@layout/center_loadingprogress"/>
+
+    </RelativeLayout>
+
 </LinearLayout>
