--- a/app/src/main/res/layout/sf_info.xml
+++ b/app/src/main/res/layout/sf_info.xml
@@ -4,246 +4,272 @@
     android:orientation="vertical"
     android:background="#EEEEEE">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            >
-        <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:background="#42a664">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="沙发信息"
-            android:id="@+id/textView2"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:textSize="18sp"
-            android:textColor="#ffffff" />
-    </RelativeLayout>
+    <!--加载数据进度条-->
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-
-        <LinearLayout
-            android:orientation="vertical"
+        <RelativeLayout
+            android:orientation="horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/f">
+            android:layout_height="50dp"
+            android:background="#42a664">
 
             <TextView
-                style="@style/sf_info_text"
-                android:textColor="#ffed8a00"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="沙发信息"
+                android:id="@+id/textView2"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:textSize="18sp"
-                android:gravity="center"
-                android:text="北京西四环沙发"
-                android:id="@+id/sftitle"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="类型："
-                style="@style/sf_info_text"
-                android:id="@+id/textView3" />
-
-            <TextView
-                style="@style/sf_info_text"
-                android:text="卧室"
-                android:id="@+id/type" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/sf_info_text"
-                android:text="可入住时间："
-                android:id="@+id/textView9" />
-
-            <TextView
-                style="@style/sf_info_text"
-                android:text="2015-5-31"
-                android:id="@+id/intime" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/sf_info_text"
-                android:text="沙发地点："
-                android:id="@+id/textView10" />
-
-            <TextView
-                style="@style/sf_info_text"
-                android:text="北京四环"
-                android:id="@+id/where" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:id="@+id/s">
-
-                <TextView
-                    style="@style/sf_info_text"
-                    android:text="性别限制："
-                    android:id="@+id/textView12" />
-
-                <TextView
-                    style="@style/sf_info_text"
-                    android:text="女"
-                    android:id="@+id/sex" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <TextView
-                    style="@style/sf_info_text"
-                    android:text="年龄限制："
-                    android:id="@+id/textView8" />
-
-                <TextView
-                    style="@style/sf_info_text"
-                    android:text="20~40岁"
-                    android:id="@+id/age" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:id="@+id/n">
-
-                <TextView
-                    style="@style/sf_info_text"
-                    android:text="招待人数："
-                    android:id="@+id/textView14" />
-
-                <TextView
-                    style="@style/sf_info_text"
-                    android:text="1人"
-                    android:id="@+id/mannumber" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <TextView
-                    style="@style/sf_info_text"
-                    android:text="接待天数："
-                    android:id="@+id/textView20" />
-
-                <TextView
-                    style="@style/sf_info_text"
-                    android:text="3天以内"
-                    android:id="@+id/day" />
-            </LinearLayout>
-        </LinearLayout>
+                android:textColor="#ffffff" />
+        </RelativeLayout>
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="fill_parent"
+            android:id="@+id/InfoLayout"
+            android:focusableInTouchMode="false"
+            android:alpha="0">
 
-            <TextView
-                style="@style/sf_info_text"
-                android:text="自带物品："
-                android:id="@+id/textView16" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/f">
 
-            <TextView
-                style="@style/sf_info_text"
-                android:text="毛巾，牙刷，等。。。"
-                android:id="@+id/selfgoods" />
-        </LinearLayout>
+                <TextView
+                    style="@style/sf_info_text"
+                    android:textColor="#ffed8a00"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:id="@+id/sftitle"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                style="@style/sf_info_text"
-                android:text="其他信息："
-                android:id="@+id/textView18" />
+                <TextView
+                    android:text="类型："
+                    style="@style/sf_info_text"
+                    android:id="@+id/textView3" />
 
-            <TextView
-                style="@style/sf_info_text"
-                android:text="要求入住者身体健康"
-                android:id="@+id/otherinfo" />
+                <TextView
+                    style="@style/sf_info_text"
+                    android:id="@+id/type" />
+            </LinearLayout>
 
-        </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+                <TextView
+                    style="@style/sf_info_text"
+                    android:text="可入住时间："
+                    android:id="@+id/textView9" />
 
-            <TextView
-                style="@style/sf_info_text"
-                android:text="联系方式："
-                android:id="@+id/textView7" />
+                <TextView
+                    style="@style/sf_info_text"
+                    android:id="@+id/intime" />
+            </LinearLayout>
 
-            <TextView
-                style="@style/sf_info_text"
-                android:text="手机：123456789"
-                android:id="@+id/contactway" />
-        </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+                <TextView
+                    style="@style/sf_info_text"
+                    android:text="沙发地点："
+                    android:id="@+id/textView10" />
 
-            <TextView
-                style="@style/sf_info_text"
-                android:text="发布时间："
-                android:id="@+id/textView11" />
+                <TextView
+                    style="@style/sf_info_text"
+                    android:id="@+id/where" />
+            </LinearLayout>
 
-            <TextView
-                style="@style/sf_info_text"
-                android:text="2015-5-30"
-                android:id="@+id/publictime" />
-        </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
-    </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/s">
+
+                    <TextView
+                        style="@style/sf_info_text"
+                        android:text="性别限制："
+                        android:id="@+id/textView12" />
+
+                    <TextView
+                        style="@style/sf_info_text"
+                        android:id="@+id/sex" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <TextView
+                        style="@style/sf_info_text"
+                        android:text="年龄限制："
+                        android:id="@+id/textView8" />
+
+                    <TextView
+                        style="@style/sf_info_text"
+                        android:id="@+id/age" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/n">
+
+                    <TextView
+                        style="@style/sf_info_text"
+                        android:text="招待人数："
+                        android:id="@+id/textView14" />
+
+                    <TextView
+                        style="@style/sf_info_text"
+                        android:id="@+id/mannumber" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <TextView
+                        style="@style/sf_info_text"
+                        android:text="接待天数："
+                        android:id="@+id/textView20" />
+
+                    <TextView
+                        style="@style/sf_info_text"
+                        android:id="@+id/day" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    style="@style/sf_info_text"
+                    android:text="自带物品："
+                    android:id="@+id/textView16" />
+
+                <TextView
+                    style="@style/sf_info_text"
+                    android:id="@+id/selfgoods" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <TextView
+                    style="@style/sf_info_text"
+                    android:text="其他信息："
+                    android:id="@+id/textView18" />
+
+                <TextView
+                    style="@style/sf_info_text"
+                    android:id="@+id/otherinfo" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    style="@style/sf_info_text"
+                    android:text="联系方式："
+                    android:id="@+id/textView7" />
+
+                <TextView
+                    style="@style/sf_info_text"
+                    android:id="@+id/contactway" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/butlayout"
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    style="@style/sf_info_text"
+                    android:text="发布时间："
+                    android:id="@+id/textView11" />
+
+                <TextView
+                    style="@style/sf_info_text"
+                    android:id="@+id/publictime" />
+
+            </LinearLayout>
+
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginRight ="15dip"
+                >
+                <TextView
+                    style="@style/sf_info_text"
+                    android:height="40dp"
+                    android:textColor="#FF0000"
+                    android:text="该沙发还没被抢走,赶紧下手！"
+                    android:textSize="18sp"
+                    android:layout_alignParentLeft="true"
+                    android:id="@+id/qskinfo"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content" />
+                <Button
+                    android:layout_alignParentRight="true"
+                    android:text="抢沙发"
+                    android:height="40dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:background="#42a664"
+                    android:textColor="#ffffff"
+                    android:id="@+id/qsfbutton" />
+
+            </RelativeLayout>
 
             <com.sfk.utils.ScollListview
                 android:layout_width="fill_parent"
@@ -251,5 +277,12 @@
                 android:id="@+id/photolistView" />
 
         </LinearLayout>
+
+    </LinearLayout>
+
+        <!--中间加载数据滚动-->
+        <include layout="@layout/center_loadingprogress"/>
+
+    </RelativeLayout>
 
 </ScrollView>
