--- a/app/src/main/res/layout/panic_fragment.xml
+++ b/app/src/main/res/layout/panic_fragment.xml
@@ -68,19 +68,13 @@
             android:layout_marginRight="5dp" />
     </LinearLayout>
 
-    <!--加载数据进度条-->
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <include layout="@layout/select_to_refresh"/>
-
-            <com.sfk.UI.RefreshableView
+            <com.gdkm.sfk.UI.RefreshableView
                 android:id="@+id/refreshable_view"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
@@ -90,12 +84,7 @@
                 android:id="@+id/seek_sf_topic_listView2"
                 android:layout_marginTop="5dp"
                 android:background="#ffffff" />
-            </com.sfk.UI.RefreshableView>
+            </com.gdkm.sfk.UI.RefreshableView>
         </LinearLayout>
-
-        <!--中间加载数据滚动-->
-        <include layout="@layout/center_loadingprogress"/>
-
-    </RelativeLayout>
 
 </LinearLayout>
