--- a/app/src/main/res/layout/seek_sf_topic.xml
+++ b/app/src/main/res/layout/seek_sf_topic.xml
@@ -81,7 +81,7 @@
 
             <include layout="@layout/select_to_refresh"/>
 
-            <com.sfk.UI.RefreshableView
+            <com.gdkm.sfk.UI.RefreshableView
                 android:id="@+id/refreshable_view"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
@@ -92,7 +92,7 @@
                 android:id="@+id/seek_sf_topic_listView"
                 android:layout_marginTop="5dp"
                 android:background="#ffffff" />
-            </com.sfk.UI.RefreshableView>
+            </com.gdkm.sfk.UI.RefreshableView>
 
             <Button
                 android:layout_width="fill_parent"
@@ -103,11 +103,9 @@
                 android:textSize="18sp"
                 android:background="@drawable/green_btn_selector"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true">
+                android:layout_alignParentLeft="true"/>
 
-            </Button>
         </LinearLayout>
-
         <!--中间加载数据滚动-->
         <include layout="@layout/center_loadingprogress"/>
 
