--- a/app/src/main/res/layout/address_selector.xml
+++ b/app/src/main/res/layout/address_selector.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="300dp"
-android:layout_height="match_parent"
+android:layout_height="wrap_content"
 android:background="@drawable/coner_picker"
 android:orientation="vertical">
 <RelativeLayout
@@ -125,7 +125,7 @@ android:orientation="vertical">
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="50dp"
-    android:background="#ffffff"
+    android:layout_marginBottom="8dp"
     >
     <Button
         android:layout_width="wrap_content"
