--- a/app/src/main/res/layout/pull_to_refresh.xml
+++ b/app/src/main/res/layout/pull_to_refresh.xml
@@ -5,7 +5,7 @@
     android:layout_height="60dip" >
 
     <LinearLayout
-        android:layout_width="200dip"
+        android:layout_width="180dip"
         android:layout_height="60dip"
         android:layout_centerInParent="true"
         android:orientation="horizontal" >
@@ -27,6 +27,7 @@
                 android:layout_width="30dip"
                 android:layout_height="30dip"
                 android:layout_centerInParent="true"
+                android:indeterminateDrawable="@drawable/eg_rotate_loading_style_01"
                 android:visibility="gone"
                 />
         </RelativeLayout>
@@ -34,7 +35,7 @@
         <LinearLayout
             android:layout_width="0dip"
             android:layout_height="60dip"
-            android:layout_weight="12"
+            android:layout_weight="10"
             android:orientation="vertical" >
 
             <TextView
