--- a/app/src/main/res/layout/select_to_refresh.xml
+++ b/app/src/main/res/layout/select_to_refresh.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="50dp"
     android:visibility="gone"
-    android:background="@drawable/light_gray">
+    android:background="@color/light_gray">
 
     <RelativeLayout
         android:layout_width="200dp"
