--- a/app/src/main/res/layout/topic_text_image.xml
+++ b/app/src/main/res/layout/topic_text_image.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="#E9ECF1">
-    <com.sfk.UI.BBS_list_ImageText
+    <com.gdkm.sfk.UI.BBS_list_ImageText
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:id="@+id/topicTextImage"
